# engineer-manager

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  benchmark_tasks.py  client.py  focus_resource_env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_sim.py  styles.css  tasks.py  validate-submission.sh
.tmp/: focus_testcases.py
.tmp/validator-tests/: case-missing-openenv.sh  case-real-docker-down.sh  case-slow-build.sh  case-url-autofix.sh  run-case.sh
__pycache__/: app.cpython-313.pyc.1449674647664  app.cpython-313.pyc.1640999147424  app.cpython-313.pyc.1901660185504  app.cpython-313.pyc.1914704012192  app.cpython-313.pyc.2057447253008  app.cpython-313.pyc.2107800725504  app.cpython-313.pyc.2215899944864  app.cpython-313.pyc.2378700466288  app.cpython-313.pyc.2455555251136  app.cpython-313.pyc.2495993272224  app.cpython-313.pyc.2591590753296  app.cpython-313.pyc.2674205304832  app.cpython-313.pyc.3059155966912  focus_resource_env.cpython-313.pyc.1811194015280  focus_resource_env.cpython-313.pyc.2057892654768  focus_resource_env.cpython-313.pyc.2649235817904  focus_resource_env.cpython-313.pyc.2899952299600  inference.cpython-313.pyc.1963861384032  inference.cpython-313.pyc.1969984138800  models.cpython-313.pyc.2218928435504  run_sim.cpython-313.pyc.1811575660464
server/: __init__.py  app.py  engineer_manager_environment.py
server/__pycache__/: __init__.cpython-313.pyc.1906170705584  app.cpython-313.pyc.1757695982640  app.cpython-313.pyc.2218465671088  app.cpython-313.pyc.2255770615472  (+1 more)
(+9 files in other folders)
